--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,11 +12,13 @@ lint: |
   ansible-lint
 platforms:
   - name: ${MOLECULE_DISTRO:-ubuntu}-instance
-    image: custom-${MOLECULE_DOCKER_DISTRO:-ubuntu-default}-ansible
-    dockerfile: ../docker/${MOLECULE_DOCKER_DISTRO:-ubuntu-default}/Dockerfile
+    image: "lorebett/${MOLECULE_DOCKER_DISTRO:-ubuntu-22.04}-for-molecule:latest"
+#    image: custom-${MOLECULE_DOCKER_DISTRO:-ubuntu-default}-ansible
+#    dockerfile: ../docker/${MOLECULE_DOCKER_DISTRO:-ubuntu-default}/Dockerfile
     command: ""
     privileged: true
-    build_image: true
+#    build_image: true
+    pre_build_image: true
 provisioner:
   name: ansible
   playbooks:
