Coverflow Alt-Tab

--- a/tasks/gnome-extensions.yml
+++ b/tasks/gnome-extensions.yml
@@ -28,6 +28,7 @@
       - id: 1112 # screenshot-tool
       - id: 3088 # extension-list
       - id: 7 # removable-drive-menu
+      - id: 97 # Coverflow Alt-Tab
       #- id: 120 # system-monitor
       #- id: 3843 # just-perfection
 
