--- a/tasks/gnome-extensions.yml
+++ b/tasks/gnome-extensions.yml
@@ -30,6 +30,7 @@
       - id: 7 # removable-drive-menu
       - id: 97 # Coverflow Alt-Tab
       - id: 16 # Auto Move Windows
+      - id: 10 # windowNavigator
       #- id: 120 # system-monitor
       #- id: 3843 # just-perfection
 
