enable docker.socket

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -39,12 +39,21 @@
     groups: docker
     append: yes
 
-# with service module, when running in Docker in molecule
+# Then, you have to explicitly start docker.service
+# systemctl start docker.service.
+# With service module, when running in Docker in molecule
 # we get this error FAILED! =>
 # "msg": "Could not find the requested service docker: host"
 # with systemd module instead it works
 - name: Do NOT enable service docker on boot
-  become: true
+  become: yes
   ansible.builtin.systemd:
-    name: docker
-    enabled: false
+    name: docker.service
+    enabled: no
+
+# This way, as soon as we run a docker command docker.service starts
+- name: Enable docker.socket on boot
+  become: yes
+  ansible.builtin.systemd:
+    name: docker.socket
+    enabled: yes
