--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,8 @@ roles:
   # Install a role from Ansible Galaxy.
   - name: gantsign.maven
   - name: petermosmans.customize-gnome
+    src: https://github.com/LorenzoBettini/ansible-role-customize-gnome
+    version: "issue-15"
     # src: https://github.com/LorenzoBettini/ansible-role-customize-gnome
     # version: "issue-8"
     # now https://github.com/PeterMosmans/ansible-role-customize-gnome/issues/8 is fixed
