Guake shortcut F12 for Wayland

--- a/tasks/gnome-configurations.yml
+++ b/tasks/gnome-configurations.yml
@@ -35,9 +35,22 @@
     key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/binding"
     value: "'<Super>t'"
 
+- name: Guake shortcut F12 for Wayland"
+  community.general.dconf:
+    key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/guake/name"
+    value: "'guake'"
+- name: guake shortcut command
+  community.general.dconf:
+    key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/guake/command"
+    value: "'guake-toggle'"
+- name: guake shortcut binding
+  community.general.dconf:
+    key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/guake/binding"
+    value: "'F12'"
+
 # All custom shortcuts must also be added to an array.
 
 - name: enable custom keybindings
   dconf:
     key: "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings"
-    value: "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']"
+    value: "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/guake/']"
