--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -25,8 +25,9 @@
     - include: tasks/main-packages.yml
     - include: tasks/firefox.yml
     - include: tasks/guake.yml
-    - include: tasks/zsh.yml
-    - include: tasks/zsh-antigen.yml
+    - name: Install Oh My Zsh
+      ansible.builtin.include_role:
+        name: lorenzobettini.oh_my_zsh
     - include: tasks/kde-gnome-packages.yml
     - include: tasks/java-packages.yml
     - include: tasks/google-chrome.yml
