--- a/requirements.yml
+++ b/requirements.yml
@@ -9,6 +9,9 @@ roles:
     # src: https://github.com/LorenzoBettini/ansible-role-customize-gnome
     # version: "issue-8"
     # now https://github.com/PeterMosmans/ansible-role-customize-gnome/issues/8 is fixed
+  # Install my own roles from GitHub
+  - name: lorenzobettini.oh_my_zsh
+    src: https://github.com/LorenzoBettini/ansible-molecule-oh-my-zsh-example/
 
 collections:
   # Install a collection from Ansible Galaxy.
