stop testing ubuntu 18.04
fzf is not available

--- a/.github/workflows/molecule-pr.yml
+++ b/.github/workflows/molecule-pr.yml
@@ -69,7 +69,7 @@ jobs:
         dockerdistro:
           - ubuntu-22.04
           - ubuntu-20.04
-          - ubuntu-18.04
+          # - ubuntu-18.04 # too old and does not contain fzf
 
     steps:
       - name: Check out the codebase.
