--- a/requirements.yml
+++ b/requirements.yml
@@ -2,16 +2,15 @@
 roles:
   # Install a role from Ansible Galaxy.
   - name: gantsign.maven
-  - name: petermosmans.customize-gnome
-    version: 0.2.5
-    # src: https://github.com/LorenzoBettini/ansible-role-customize-gnome
-    # version: "issue-15"
-    # src: https://github.com/LorenzoBettini/ansible-role-customize-gnome
-    # version: "issue-8"
-    # now https://github.com/PeterMosmans/ansible-role-customize-gnome/issues/8 is fixed
   # Install my own roles from GitHub
   - name: lorenzobettini.oh_my_zsh
     src: https://github.com/LorenzoBettini/ansible-molecule-oh-my-zsh-example/
+  - name: lorenzobettini.my_gnome_role
+    src: https://github.com/LorenzoBettini/my_gnome_role/
+  # transitive dependencies
+  # required by my_gnome_role
+  - name: petermosmans.customize-gnome
+    version: 0.2.10
 
 collections:
   # Install a collection from Ansible Galaxy.
