don't use flatpak in test playbook
Since it will make linting fail since we moved that file

--- a/test-tasks-playbook.yml
+++ b/test-tasks-playbook.yml
@@ -1,5 +1,4 @@
 ---
 - hosts: all
   tasks:
-    - include: tasks/flatpak.yml
-    - include: tasks/gnome-extension-manager.yml
+    - include: tasks/vscode.yml
