--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         scenario:
-          - default # ubuntu 22.10
+          - default
           - kubuntu-22.10
 
     steps:
