--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -22,8 +22,8 @@ jobs:
       fail-fast: false
       matrix:
         scenario:
-          - default # ubuntu 22.10
-          - kubuntu-22.10
+          - default # ubuntu latest (current)
+          - kubuntu
 
     steps:
       - name: Check out the codebase.
