--- a/tasks/dropbox.yml
+++ b/tasks/dropbox.yml
@@ -12,15 +12,16 @@
   become: true
   apt_key:
     # use locally save key to avoid possible temporary failures
+    # keyserver: pgp.mit.edu
+    # id: 1C61A2656FB57B7E4DE0F4C1FC918B335044912E
     file: "/tmp/dropbox.gpg"
     state: present
 
-# This works with the updated GPG key
-# maybe from 22.04 on.
-- name: Add Dropbox apt repository with Distribution codename
+# Let's use the Disco repository for good
+- name: Add Dropbox apt repository
   become: true
   apt_repository:
-    repo: "deb [arch=i386,amd64] http://linux.dropbox.com/ubuntu {{ ansible_distribution_release }} main"
+    repo: "deb [arch=i386,amd64] http://linux.dropbox.com/ubuntu disco main"
     state: present
     filename: dropbox
 
