--- a/tasks/google-chrome.yml
+++ b/tasks/google-chrome.yml
@@ -12,6 +12,7 @@
   become: true
   apt_key:
     # url: https://dl-ssl.google.com/linux/linux_signing_key.pub
+    # e.g., wget -q -O - https://dl.google.com/linux/linux_signing_key.pub
     # use locally save key to avoid possible temporary failures
     file: "/tmp/google_linux_signing_key.pub"
     state: present
