--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -14,6 +14,7 @@
     state: present
 
 - name: Install npm
+  become: true
   ansible.builtin.package:
     name:
     - npm # required for some neovim LSPs, e.g., bashls
