comment on homebrew installation

--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -1,5 +1,6 @@
 ---
 # REQUIRED: git curl
+# must NOT be installed with sudo
 - name: Install Homebrew
   ansible.builtin.shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
   args:
