--- a/playbook-kde-neon.yml
+++ b/playbook-kde-neon.yml
@@ -46,7 +46,8 @@
       when: ansible_distribution_version is version('20.04', '>=')
     - include_tasks: tasks/touchegg-kde-conf.yml
       when: ansible_distribution_version is version('20.04', '>=')
-    - include_tasks: tasks/skype.yml
+    # Skype requires snap and does not work well in Ansible/Docker/Systemd
+    #- include_tasks: tasks/skype.yml
     - include_tasks: tasks/amarok.yml # Amarok not yet available in Jammy
       when: ansible_distribution_version is version('22.04', '<')
     - include_tasks: tasks/kernel-mainline.yml
