--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -46,7 +46,8 @@
     - include_tasks: tasks/touchegg.yml
       when: ansible_distribution_version is version('20.04', '>=') and ansible_distribution_version is version('22.04', '<')
       # In 22.04 I use Wayland where touchpad gestures work automatically
-    - include_tasks: tasks/skype.yml
+    # Skype requires snap and does not work well in Ansible/Docker/Systemd
+    #- include_tasks: tasks/skype.yml
     - include_tasks: tasks/amarok.yml # Amarok not yet available in Jammy
       when: ansible_distribution_version is version('22.04', '<')
     - include_tasks: tasks/kernel-mainline.yml
