--- a/tasks/dropbox.yml
+++ b/tasks/dropbox.yml
@@ -4,24 +4,28 @@
   # so we first need to copy it
   become: true
   copy:
-    src: "{{ playbook_dir }}/tasks/files/keys/dropbox.gpg"
+    src: "{{ playbook_dir }}/tasks/files/keys/dropbox.asc"
     dest: "/tmp/"
     mode: 0600
+
+# To update the local PGP key:
+# - download the latest dropbox dep package
+# - open it as an archive file
+# - open as an archive file the control.tar.zst
+# - open the postinst script
+# - take the PGP key from there
 
 - name: Add Dropbox key
   become: true
   apt_key:
-    # use locally save key to avoid possible temporary failures
-    # keyserver: pgp.mit.edu
-    # id: 1C61A2656FB57B7E4DE0F4C1FC918B335044912E
-    file: "/tmp/dropbox.gpg"
+    file: "/tmp/dropbox.asc"
     state: present
 
 # Let's use the Disco repository for good
 - name: Add Dropbox apt repository
   become: true
   apt_repository:
-    repo: "deb [arch=i386,amd64] http://linux.dropbox.com/ubuntu noble main"
+    repo: "deb [arch=i386,amd64 signed-by=/etc/apt/keyrings/dropbox.asc] http://linux.dropbox.com/ubuntu noble main"
     state: present
     filename: dropbox
 
