zathura-pdf-poppler

--- a/tasks/latex.yml
+++ b/tasks/latex.yml
@@ -1,4 +1,11 @@
 ---
+- name: Install Zathura PDF reader
+  become: true
+  apt:
+    state: present
+    pkg:
+    - zathura-pdf-poppler
+
 - name: Install Latex Packages
   become: true
   apt:
