--- a/tasks/recoll.yml
+++ b/tasks/recoll.yml
@@ -1,41 +1,50 @@
 ---
-- name: Copy Recoll apt key
-  # The apt_key file is expected to be found on the remote host
-  # so we first need to copy it
-  become: true
-  copy:
-    src: "{{ playbook_dir }}/tasks/files/keys/recoll_signing_key.pub"
-    dest: "/tmp/"
-    mode: 0600
-
-- name: Add Recoll key
-  become: true
-  apt_key:
-    # use locally save key to avoid possible temporary failures
-    # repo: ppa:recoll-backports/recoll-1.15-on
-    file: "/tmp/recoll_signing_key.pub"
+- name: Add Recoll APT repository
+  ansible.builtin.deb822_repository:
+    name: recoll
+    types: [deb]
+    uris:
+      - "https://ppa.launchpadcontent.net/recoll-backports/recoll-1.15-on/ubuntu"
+    suites: ["{{ ansible_distribution_release }}"]
+    components: [main]
     state: present
+    enabled: yes
+    signed_by: |
+      -----BEGIN PGP PUBLIC KEY BLOCK-----
+      Comment: Hostname: 
+      Version: Hockeypuck 2.2
 
-- name: Add Recoll apt repository with Distribution codename
-  become: true
-  apt_repository:
-    repo: "deb http://ppa.launchpad.net/recoll-backports/recoll-1.15-on/ubuntu {{ ansible_distribution_release }} main"
-    filename: "recoll-backports-ubuntu-recoll-1_15-on-{{ ansible_distribution_release }}"
-    state: present
-#  when: ansible_distribution_version is version('23.04', '<=')
-
-#- name: Add Recoll apt repository with fixed codename
-#  become: true
-#  apt_repository:
-#    repo: "deb http://ppa.launchpad.net/recoll-backports/recoll-1.15-on/ubuntu lunar main"
-#    filename: "recoll-backports-ubuntu-recoll-1_15-on-lunar"
-#    state: present
-#  when: ansible_distribution_version is version('23.04', '>')
-# And we use the latest available
+      xsFNBGYzfQQBEADDwgPE6FS0DZFRtHnMPZATV4gT8/HifeaI23geSwWMw9oJGpIK
+      A5ej2QWgQe6WN9Clv3TPM621tmqRikrKtfWfEoTBA+PjpoeQOXVWimqNORrBTxUw
+      k60agwExEWD4VbH1Ety7O9l+QaFkwZXIfiG44Z29YAyYMZNO/8FN7y3+rN+szl4x
+      ttmvLUVzIdpHaBj6pPApU0kNu4+p5u7HsQRfXMKUnBNXTUHyh6wavqrjsPkPgnxi
+      ZFMNR+qAu5cHYQXumznXGcJSJWo2xY7Rt21x7dSAElTlIi6poQILVAwNjtXsfvjr
+      loL7Ggo7OYJyxP61c/TWT6dZmLqyaAXr8UQaUAOn/sKbU1KzJLb/7JOl4z8vPZm6
+      Wyzjm7CpEVT3jz1EsDFEsD0ddOmPOoBJM1whttWoQu1GEmWtlnL9kaLwROo5Kkpv
+      hdHes7q7kVPHM7t+tVMauVwCmTZRVc2LczAavrJ0ovuShbJHYOFLLc1QJ/mlBaLK
+      yhoCKj+5MBdvpjlkj8Y2l0X/mk2/1lCKFOt1m8rk4j58tSlWkdGTBClVqJ2j6LZQ
+      J2EVhB+3AjOK4t6rLlRpdS0PGtQuvFbrtPQnlf/nkc0UZVA47irxl53U074NEj65
+      /3W/HFLng4FT7MC+/lIseyvF9kHRxW/Kmxd2M8zgxuX2rVojXx6SutRV7wARAQAB
+      zSJMYXVuY2hwYWQgUFBBIGZvciByZWNvbGwtYmFja3BvcnRzwsGOBBMBCgA4FiEE
+      mHB/WGBJv6MOeJCRezDcwEtmku4FAmYzfQQCGwMFCwkIBwIGFQoJCAsCBBYCAwEC
+      HgECF4AACgkQezDcwEtmku669g/+PmJFCwcJkO9JJ3kDbd/dDtdAuI2xNUzol+gF
+      A1XgtZV3+7mM9wTDU67wyFq5nmZflmSrr+IHfFOqhL5ZYWk+0TXQ0ZbVx7PF+6ne
+      0w/FDJA2olftF52NJIhGgRuyFGT9jemx2RPa3uG90ZQfZKFTnyAHImWdZNnsHgpm
+      /uOVmNnaJZMNBd/AY+yKe3s8JSFqjF24oTQ2bgjaalk7EK0OxOCr9AIG2rBkO1tY
+      IvHfafMk+taCjKiLVTzMoRL0PafRI/pNgL46UVYcbArqPUSImoo5ol/31xwVBw0b
+      dHOBXjcJnxEubSiKQleC9KbRIpvUO8S2NhN63zwZ3zZBwowrEmhv6XjQH9h9wEzz
+      NvB4tE1kSh0tB4f60jPtafBj3E2OEWpluXqwRdaLF4N3MhAWYNjAKDeZCiTy5mYM
+      fdtof0umbxC/piChYp+0FHYIg78lpKXWfZhyKf5CzBcOM7lGYdAeYFNX8MeHtUJU
+      AjP2myd0xHKlROK7QITt+/WateIqLhwUFo5qLpu2W27gJFF/D8p7iP5vWcsQ+Nz2
+      yqLpOvjVILM5dB3SvsT4GOU7gTReCZ+GLRV4s61XwB5enB9QmsGbP4TBRvXuT38P
+      3/OAkRjq6gjk0kygLK8yUH3XZ3Lh9Hr7xGQEXIARGKutqH4cST/BCyT2xZ2JwQXz
+      b1TU3kI=
+      =hRr5
+      -----END PGP PUBLIC KEY BLOCK-----
 
 - name: Install Recoll
   become: true
-  apt:
+  ansible.builtin.apt:
     update_cache: yes
     state: present
     pkg:
@@ -43,17 +52,3 @@
     - unrtf
     - untex
     - djvulibre-bin
-
-# Now handled with dotfiles
-# - name: Create Recoll configuration directory
-#   ansible.builtin.file:
-#     path: '~/.recoll'
-#     state: directory
-#     mode: 0775
-
-# - name: Set Recoll configuration
-#   ansible.builtin.copy:
-#     src: "{{ playbook_dir }}/tasks/files/recoll/"
-#     dest: "~/.recoll/"
-#     mode: 0600
-
