--- a/tasks/mozilla.yml
+++ b/tasks/mozilla.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check whether snap is installed and on system path 
-  command: 'which snap' 
+  ansible.builtin.command: 'which snap' 
   register: snap_installed
   ignore_errors: yes
   changed_when: false
@@ -14,29 +14,17 @@
     - thunderbird
   when: snap_installed.rc == 0
 
-- name: Copy Mozilla apt key
-  # The apt_key file is expected to be found on the remote host
-  # so we first need to copy it
-  become: true
-  copy:
-    src: "{{ playbook_dir }}/tasks/files/keys/mozilla.pub"
-    dest: "/tmp/"
-    mode: 0600
-
-- name: Add Mozilla key
-  become: true
-  apt_key:
-    # use locally save key to avoid possible temporary failures
-    # repo: https://launchpad.net/%7Emozillateam/+archive/ubuntu/ppa
-    file: "/tmp/mozilla.pub"
+- name: Add Mozilla APT repository
+  ansible.builtin.deb822_repository:
+    name: mozillateamppa
+    types: [deb]
+    uris:
+      - "https://ppa.launchpadcontent.net/mozillateam/ppa/ubuntu"
+    suites: ["{{ ansible_distribution_release }}"]
+    components: [main]
     state: present
-
-- name: Add Mozilla Team apt repository with Distribution codename
-  become: true
-  apt_repository:
-    repo: "deb https://ppa.launchpadcontent.net/mozillateam/ppa/ubuntu {{ ansible_distribution_release }} main"
-    filename: "mozillateamppa"
-    state: present
+    enabled: yes
+    signed_by: "{{ lookup('ansible.builtin.file', 'mozilla.pub') }}"
 
 - name: Check whether it is the first time we add Mozilla PPA
   stat:
@@ -54,8 +42,8 @@
 
 - name: Copy Mozilla apt preference
   become: true
-  copy:
-    src: "{{ playbook_dir }}/tasks/files/mozilla/mozillateamppa.txt"
+  ansible.builtin.copy:
+    src: "files/mozillateamppa.txt"
     dest: "/etc/apt/preferences.d/mozillateamppa"
     mode: 0644
 
@@ -71,6 +59,6 @@
 - name: Copy Mozilla Unattended update preference
   become: true
   copy:
-    src: "{{ playbook_dir }}/tasks/files/mozilla/51unattended-upgrades-mozilla.txt"
+    src: "files/51unattended-upgrades-mozilla.txt"
     dest: "/etc/apt/apt.conf.d/51unattended-upgrades-mozilla"
     mode: 0644
